implemented suggestions